<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black">

    <View
        android:id="@+id/colorBox"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:background="@color/white"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center">

        <TextView
            android:id="@+id/pitch_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/pitch"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/yaw_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/yaw"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/roll_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/roll"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/drawing_mode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/drawing_mode"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/action_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/action"
        android:textSize="18sp"
        android:textColor="@color/white"/>

</LinearLayout>